Login with JWT working
