# src/JsonApi/Transformer/UserResourceTransformer.php
@@ -1,0 +1,90 @@
+<?php
+
+namespace App\JsonApi\Transformer;
+
+use App\Entity\User;
+use WoohooLabs\Yin\JsonApi\Schema\Link\Link;
+use WoohooLabs\Yin\JsonApi\Schema\Link\ResourceLinks;
+use WoohooLabs\Yin\JsonApi\Schema\Resource\AbstractResource;
+
+/**
+ * User Resource Transformer.
+ */
+class UserResourceTransformer extends AbstractResource
+{
+    /**
+     * {@inheritdoc}
+     */
+    public function getType($user): string
+    {
+        return 'users';
+    }
+
+    /**
+     * {@inheritdoc}
+     */
+    public function getId($user): string
+    {
+        return (string) $user->getId();
+    }
+
+    /**
+     * {@inheritdoc}
+     */
+    public function getMeta($user): array
+    {
+        return [];
+    }
+
+    /**
+     * {@inheritdoc}
+     */
+    public function getLinks($user): ?ResourceLinks
+    {
+        return ResourceLinks::createWithoutBaseUri()->setSelf(new Link('/users/'.$this->getId($user)));
+    }
+
+    /**
+     * {@inheritdoc}
+     */
+    public function getAttributes($user): array
+    {
+        return [
+            'email' => function (User $user) {
+                return $user->getEmail();
+            },
+            'roles' => function (User $user) {
+                return $user->getRoles();
+            },
+            'password' => function (User $user) {
+                return $user->getPassword();
+            },
+            'isEnabled' => function (User $user) {
+                return $user->getIsEnabled();
+            },
+            'passwordRequestToken' => function (User $user) {
+                return $user->getPasswordRequestToken();
+            },
+            'passwordRequestedAt' => function (User $user) {
+                return $user->getPasswordRequestedAt()->format(DATE_ATOM);
+            },
+        ];
+    }
+
+    /**
+     * {@inheritdoc}
+     */
+    public function getDefaultIncludedRelationships($user): array
+    {
+        return [];
+    }
+
+    /**
+     * {@inheritdoc}
+     */
+    public function getRelationships($user): array
+    {
+        return [
+        ];
+    }
+}
